--- a/HDL-Batch-installer-SRC/_bin/playground/Common/config.INI
+++ b/HDL-Batch-installer-SRC/_bin/playground/Common/config.INI
@@ -15,6 +15,9 @@ inform_unknown_ID=1
 opl_partition=+OPL
 default_mountpoint=X
 [NBD]
-Default_IP=192.168.0.1
+Default_IP=
 [FEATURES]
-allow_experimental=1
+allow_experimental=0
+[HDDManager]
+display_games_titles=1
+display_subpartition=0
