--- a/Release/Common/config.INI
+++ b/Release/Common/config.INI
@@ -18,3 +18,6 @@ default_mountpoint=X
 Default_IP=192.168.0.1
 [FEATURES]
 allow_experimental=0
+[HDDManager]
+display_games_titles=1
+display_subpartition=0
