new gh-pages theme

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,35 @@
+# jekyll
+.jekyll-metadata
 _site
 .sass-cache
-Gemfile.lock
+.jekyll-cache
+
+
+# bundler
 *.gem
+Gemfile.lock
+
+
+# python
+*.whl
+
+
+# npm
+node_modules
+package-lock.json
+
+
+# _sass
+_sass/@primer/css/**/*.md
+
+
+# lighthouse
+*.report.html
+
+
+# action
+action.changelog.md
+
+script/**
+!script/ProcessData.sh
+!script/**.TEMPLATE
