--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ HDL-Batch-installer-SRC/Lang/*.mo
 HDL-Batch-installer-SRC/_bin/playground/Downloads
 HDL-Batch-installer-SRC/HDL-Batch-installer.depend
 HDL-Batch-installer-SRC/gamename/gamename.csv
+HDL-Batch-installer-SRC/_bin/playground/errdump.txt
