fix discord release backup system

--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -198,5 +198,5 @@ jobs:
       env:
         DISCORD_WEBHOOK: ${{ secrets.BACKUP_WEBHOOK }}
       with:
-        args: HDL-INST/HDLBInst*.7z
+        args: HDLBInst*.7z
 
