--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ HDL-Batch-installer-SRC/HDL-Batch-installer.depend
 HDL-Batch-installer-SRC/gamename/gamename.csv
 HDL-Batch-installer-SRC/_bin/playground/errdump.txt
 HDL-Batch-installer-SRC/_bin/playground/wx*.dll
+HDL-Batch-installer-SRC/HDL-Batch-installer.layout
