--- a/.github/workflows/Update_version_tag.yml
+++ b/.github/workflows/Update_version_tag.yml
@@ -2,6 +2,8 @@ name: Update version tag
 on:
   workflow_dispatch:
   push:
+    branches:
+      - 'main'
     paths:
       - 'Release**'
       - 'Release32**'
