--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ HDL-Batch-installer-SRC/gamename/gamename.csv
 HDL-Batch-installer-SRC/_bin/playground/errdump.txt
 HDL-Batch-installer-SRC/_bin/playground/wx*.dll
 HDL-Batch-installer-SRC/HDL-Batch-installer.layout
+/HDL-Batch-installer-SRC/_bin/playground/Common/HDD-OSD-Icon-Database-main
+HDL-Batch-installer-SRC/_bin/playground/Common/ICONDB.ZIP
